# jobscan

./: .gitignore  README.md  pyproject.toml  setup_cron.sh
jobscan/: __init__.py  cli.py  config.py
jobscan/cover_letter/: __init__.py  docx.py  generator.py
jobscan/matcher/: __init__.py  analyzer.py  relevance.py
jobscan/models/: __init__.py  job.py  slack.py
jobscan/scraper/: __init__.py  base.py  generic.py
jobscan/sheets/: __init__.py
jobscan/storage/: database.py  models.py  sync.py
src/jobscan/: config.py
src/jobscan/cover_letter/: pdf.py
src/jobscan/models/: job.py
src/jobscan/sheets/: tracker.py
src/jobscan/slack/: __init__.py  client.py  parser.py
src/jobscan/storage/: __init__.py  database.py  models.py
